# contextosolver

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: config.yaml  contexto.yaml
data/: unique_lemmas.json  words.json
src/: main.py
src/contextosolver/: __init__.py
src/contextosolver/config/: contexto_config.py
src/contextosolver/preprocessing/: data_loader.py  lemmization.py  spacy_lemmatization.py
src/contextosolver/solver/: contexto_client.py  contexto_solver.py
