[project]
name = "contextosolver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.7.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "pre-commit>=4.2.0",
    "qdrant-client>=1.14.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
